arreglados los issues